# SAI-baseversion

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLEANUP-PLAN-PII.md  CONTRIBUTING.md  CUSTOMIZE-ME.md  Dockerfile  HANDOFF.md  MIGRATION-BACKLOG.md  MIGRATION-PRINCIPLES.md  Makefile  PHASE-0-DONE.md  PHASE-1-DONE.md  PHASE-2-DONE.md  PHASE-3-PARTIAL-DONE.md  PHASE-3F-CUTOVER.md  PRINCIPLES.md  README.md  SUPPLIERS.md  boundary_check_allowlist.txt  boundary_check_private_terms.example.txt  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/hooks/: boundary_guard.sh  checkout_push_gate.sh  danger_guard.sh  frame_check_nudge.sh  frame_check_push_gate.sh
.github/ISSUE_TEMPLATE/: contribution-proposal.md
.github/workflows/: boundary.yml  (+1 more)
app/: __init__.py  main.py
config/: .env.example.1password  .env.example.keychain  .env.example.literal  channel_allowed_discussion.yaml  llm_registry.yaml  sai_runtime_tunables.yaml
docs/: README.md  ad-hoc-autoexec-and-tag-2026-05-28.md  architecture.md  cowork_skill_creator_prompt.md  design_cost_dashboard_slack.md  design_live_public_versioning.md  design_loop3_resolution.md  design_rag_primitive.md  design_reply_validator_loosen.md  design_second_opinion_gate.md  e1_principles_audit.md  email_classifier_qa_template.md  email_taxonomy_template.md  local_model_rollout_loop.md  memory_architecture.md  nathanael_vision.md  onboarding_wizard_prompt.md  ralph-extension.md  scheduled_routines.md  session_2026_05_05.md  slack_bot_install.md  system_inventory.md  threat_model.md
eval/: README.md  canaries.jsonl  disagreement_queue.jsonl  edge_cases.jsonl  sai_operator_dm_agent_canaries.jsonl
policies/: newsletter_identification.yaml  newsletter_tagging.yaml  starter_email_interaction.yaml
prompts/: prompt-locks.yaml
registry/: effect_classes.yaml  task_kinds.yaml  tools.yaml
scripts/: analyze_video.py  auth_calendar.py  auth_gmail.py  backfill_local_cloud_learning.py  batch_disagreements.py  boundary_check.py  bounded_loop.py  check_1password_auth.py  check_doc_freshness.py  check_hardcoded_models.py  check_langsmith.py  compare_email_modes.py  cross_review.py  curate_legacy_eval_dataset.py  ensure_ollama.sh  escape_with_review.sh  generate_classifier_canaries.py  generate_tool_overview.py  inspect_run.py  install_eval_hooks.sh  list_meeting_requests.py  loop_example.sh  manage_background_services.py  merge_curated_eval_into_overlay.py  migrate_gmail_labels.py  migrate_runtime_state.py  notify_1password_access.py  principles_checkin.sh  promote_skill.py  prune_langgraph_checkpoints.py  rebuild_learning_corpus.py  regression_test_canaries.py  regression_test_email_classifier.py  rl_dry_run.py  rotate_audit_log.py  rotate_ollama_log.sh  run_ai_audio_brief_scheduled.sh  run_api_service.sh  run_batch_disagreements_scheduled.sh  run_daily_cost_report_scheduled.sh  (+32 more)
tests/: conftest.py  test_anthropic_json_provider.py  test_apply_root_resolution.py  test_approvals.py  test_background_services.py  test_boundary_check_private_terms.py  test_boundary_guard_blocks.py  test_bounded_loop.py  test_browser_unsubscribe.py  test_calendar_connector.py  test_calendar_events_on_date.py  test_cascade_framework_e2e.py  test_cascade_runner.py  test_channel_registry.py  test_cross_review.py  test_danger_guard_blocks.py  test_disambiguation.py  test_distance_connector.py  test_fact_memory.py  test_gmail_message_resolver.py  test_gmail_taxonomy_labels.py  test_gmail_token_override.py  test_guard_defaults.py  test_langsmith_settings.py  test_live_meeting_request_dataset.py  test_llm_registry.py  test_newsletter_workflow.py  test_operator_patterns.py  test_promote_skill_cli.py  test_prompt_hashes.py  test_prompt_loader.py  test_proposal_apply_eval_add.py  test_proposal_intake.py  test_reflection.py  test_registry_and_loaders.py  test_replay.py  test_runtime_env.py  test_sai_cost_metrics_reports.py  test_sai_eval_agent.py  test_sai_eval_tools.py  (+8 more)
workflows/: newsletter-identification-gmail-tagging.yaml  newsletter-identification-gmail.yaml  starter-email-interaction.yaml
(+525 files in other folders)
